Kubernetes/Aegis_Service_Mesh/istio_security/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: prod-apps
spec:
  mtls:
    mode: STRICT # mTLS zorunlu! Şifresiz HTTP trafiği tamamen engellenir.
